Do not track unsharded timeseries collection if they can't be moved

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.0-rc5
    • Affects Version/s: 8.0.0-alpha1
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • v8.0
    • CAR Team 2024-05-13
    • 170
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The ReshardingForTimeseries feature flag controls if timeseries collections can be moved through the moveCollection command.

      If this feature flag is disabled, we should not track unsharded timeseries collections. In fact if we do so we will end-up in the following situation:
       - collection is tracked
       - collection can't be moved through moveCollection
       - movePrimary won't move the collection

      In this situation, it will be impossible to complete a removeShard operation of a shard owning the timeseries collection because there is no way to actually move that collection out of that shard.

            Assignee:
            Silvia Surroca
            Reporter:
            Tommaso Tocci
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: