SERVER-89997 Do not track unsharded timeseries collection if they can't be moved (#21673)

GitOrigin-RevId: 7fa00db40a550f9193b55c47e818603c8fd341ac